--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,10 @@
     <string name="fitbit_desc">Serene wants to connect with your Fitbit account in order to acccess your data and behave correctly.</string>
     <string name="finish">Finish</string>
     <string name="demographic_information">Demographic Information</string>
+    <string name="google_calendar">Google Calendar</string>
+    <string name="connect_google_calendar">Connect Google Calendar</string>
+    <string name="status_not_connected">Status: Not Connected</string>
+    <string name="success">Success</string>
 
 
     <string-array name="employmentStatus">
