--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="improvement_in">Improvement (in %)</string>
+    <string name="percentage">%</string>
+    <string name="highest_day_of_anxiety">Highest Day of Anxiety</string>
+    <string name="date_here">(date here)</string>
 
 
 </resources>
