[FIX] : login page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,63 @@
 
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="appointments">Appointments</string>
+    <string name="calendar">Calendar</string>
+    <string name="medicine">Medicine</string>
+    <string name="appointment">Appointment</string>
+    <string name="logout">Logout</string>
+    <string name="doctor">Doctor</string>
+    <string name="social_demographic_information">Social-Demographic Information</string>
+    <string name="language">Language</string>
+    <string name="edit_profile">EDIT PROFILE</string>
+    <string name="full_name">Full Name</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="or">OR</string>
+    <string name="welcome_to_serene">Welcome to Serene</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="welcome_back">Welcome Back</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="register_caps">REGISTER</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="error">Error</string>
+    <string name="signup">SIGNUP</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="join_us">Join Us</string>
+    <string name="back">Back</string>
+    <string name="next">Next</string>
+    <string name="gad7_description">This is a short 7 questions that measures severity of anxiety. Please read each statement and select the choice which indicates how much the statement applied to you over the past 2 weeks.</string>
+    <string name="socio_description">Please fill in the form with your socio-demographic information so we can provide you more accurate results.</string>
+    <string name="age">Age</string>
+    <string name="martial_status">Martial Status</string>
+    <string name="ex_diabetes">ex; Diabetes</string>
+    <string name="chronic_diseases">Chronic Diseases</string>
+    <string name="sr">SR</string>
+    <string name="ex_2000">ex; 2000</string>
+    <string name="monthly_income">Monthly Income</string>
+    <string name="kg">kg</string>
+    <string name="weight">Weight</string>
+    <string name="ex_55">ex; 55</string>
+    <string name="cm">cm</string>
+    <string name="ex_160">ex; 160</string>
+    <string name="height">Height</string>
+    <string name="ex_21">ex; 21</string>
+    <string name="cigarette_smoker">Cigarette Smoker</string>
+    <string name="employment_status">Employment Status</string>
+    <string name="gad_7_scale">GAD-7 Scale</string>
+    <string name="feeling_nervous_anxious_or_on_edge">Feeling nervous, anxious, or on edge</string>
+    <string name="not_being_able_to_stop_or_control_worrying">Not being able to stop or control worrying</string>
+    <string name="nearly_every_day">Nearly every day</string>
+    <string name="several_days">Several days</string>
+    <string name="being_so_restless_that_it_s_hard_to_sit_still">Being so restless that it’s hard to sit still</string>
+    <string name="becoming_easily_annoyed_or_irritable">Becoming easily annoyed or irritable</string>
+    <string name="feeling_afraid_as_if_something_awful_might_happen">Feeling afraid as if something awful might happen</string>
+    <string name="trouble_relaxing">Trouble relaxing</string>
+    <string name="worrying_too_much_about_different_things">Worrying too much about different things</string>
+    <string name="not_at_nall_sure">Not at all sure</string>
+    <string name="over_half_nthe_days">Over half the days</string>
+    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
 
 
     <string-array name="employmentStatus">
