--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,10 @@
     <string name="not_at_nall_sure">Not at all sure</string>
     <string name="over_half_nthe_days">Over half the days</string>
     <string name="don_t_have_an_account">Don\'t Have an Account?</string>
+    <string name="next_appointment">Next Appointment</string>
+    <string name="improvement">Improvement</string>
+    <string name="throughout_the_week">(Throughout the week)</string>
+    <string name="anxiety_level">Anxiety Level</string>
 
 
     <string-array name="employmentStatus">
