--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,6 +99,7 @@
     <string name="connect_to_fitbit">Connect to Fitbit</string>
     <string name="fitbit_desc">Serene wants to connect with your Fitbit account in order to acccess your data and behave correctly.</string>
     <string name="finish">Finish</string>
+    <string name="demographic_information">Demographic Information</string>
 
 
     <string-array name="employmentStatus">
