--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -25,4 +25,5 @@
     <string name="auth">"المصادقة فشلت "</string>
     <string name="emailVerify">"تحقق من رابط البريد الإلكتروني للتحقق من الحساب "</string>
     <string name="emailpassWrong">"البريد الإلكتروني أو كلمة المرور خاطئة "</string>
+    <string name="delete">حذف</string>
 </resources>
