NOTIFICATIONS FEATURE ADDED
Notes on notifications:
- notifications appear by added medicine/appointment name
- notifications appear by scheduled date and time
- notifications appear on foreground and background of the app
- repeat alarms (notifications) for medicine work
- cancel alarm for both types of reminders function implemented, when cancel is pressed, reminder is deleted from both firebase and notification scheduler
- medicine reminders are now more customized where user can decide whether they want the reminders every certain number of mins/hours/days for a certain number of times, no use in using period (number of days between first and last day) anymore

- add medicine layout has been slightly changed to include customized repeat options
- several files that are involved with medicine and appointment have been changed for notifications to properly work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,6 +120,10 @@
     <string name="alert">Your email has not been verified.</string>
     <string name="empty">There are no upcoming appointments</string>
     <string name="tips">Quote of the day</string>
+    <string name="minute">minute(s)</string>
+    <string name="hour">hour(s)</string>
+    <string name="day">day(s)</string>
+    <string name="week">week(s)</string>
 
 
     <string-array name="employmentStatus">
@@ -127,6 +131,14 @@
         <item>@string/part</item>
         <item>@string/student</item>
         <item>@string/none</item>
+
+    </string-array>
+
+    <string-array name="MedicineRepeatType">
+        <item>@string/minute</item>
+        <item>@string/hour</item>
+        <item>@string/day</item>
+        <item>@string/week</item>
 
     </string-array>
 
