--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -318,6 +318,15 @@
     <string name="GADSuccess">Success going to next</string>
     <string name="GADFialed">There is Something Wrong, Please try again</string>
 
+    <!-- Draft Fragment Page -->
+    <string name="All">ALL</string>
+    <string name="TEXT">TEXT</string>
+    <string name="VOICE">VOICE</string>
+
+    <!-- All Draft Fragment Page -->
+    <string name="Text">Text Draft/s</string>
+    <string name="Voice">Voice Draft/s</string>
+
 </resources>
 
 
