[FEAT] : Patient Report Page+ Recommendation
- Print & share button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,7 +124,11 @@
     <string name="hour">hour(s)</string>
     <string name="day">day(s)</string>
     <string name="week">week(s)</string>
-
+    <string name="resend_verification_email"><u>Resend Verification Email</u></string>
+    <string name="steps_rcmnd">It is recommended to walk at least 3000 steps per day to get lower chance of anxiety.</string>
+    <string name="sleep_rcmnd">It is recommended to sleep at least 8 hours per day to get lower chance of anxiety.</string>
+    <string name="g_sleep"><b>Good News!</b> \nIt seems you\'re getting enough sleep!\nGetting a good night’s sleep can improve your mental well-being and help you to better manage your anxiety.</string>
+    <string name="g_steps"><b>Great Work!</b> \nYou\'re considered an active person based on your average steps per day.\nKeep in mind that active people have lower rates of anxiety than sedentary people.</string>
 
     <string-array name="employmentStatus">
         <item>@string/full</item>
