--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -9,7 +9,6 @@
     <string name="image">"الصورة المختارة "</string>
     <string name="incomeFormat">"الرجاء إدخال تنسيق الدخل الصحيح "</string>
     <string name="nameFormat">"الرجاء إدخال تنسيق الاسم الصحيح "</string>
-    <string name="no">لا</string>
     <string name="none">عاطل عن العمل</string>
     <string name="part">"موظف بدوام جزئي "</string>
     <string name="passwordChar">"كلمة المرور أقل من 6 أحرف ، يرجى المحاولة مرة أخرى "</string>
@@ -21,7 +20,6 @@
     <string name="selectPic">اختر صورة</string>
     <string name="student">طالب</string>
     <string name="wrongPassword">"لقد أدخلت كلمة مرور خاطئة "</string>
-    <string name="yes">نعم</string>
     <string name="auth">"المصادقة فشلت "</string>
     <string name="emailVerify">"تحقق من رابط البريد الإلكتروني للتحقق من الحساب "</string>
     <string name="emailpassWrong">"البريد الإلكتروني أو كلمة المرور خاطئة "</string>
@@ -29,16 +27,16 @@
 
     <!-- Add Text Draft Page -->
     <string name="NewTD">New Draft</string>
-    <string name="TitleTD">Add Title</string>
+    <string name="TitleTD">اضف عنوان</string>
     <string name="SubTD">What Do You Feel?</string>
-    <string name="SaveTD">Save</string>
+    <string name="SaveTD">حفظ</string>
     <string name="TDSavedSuccess">The Text Draft Saved Suessflly</string>
     <string name="TDSavedFialed">The Text Draft Saved Suessflly</string>
-    <string name="EmptyFields">All Fields Required</string>
+    <string name="EmptyFields">جميع الحقول مطلوبة</string>
 
     <!-- Edit Text Draft Page -->
     <string name="EditTD">Edit Draft</string>
-    <string name="SaveChangesTD">Save Changes</string>
+    <string name="SaveChangesTD">حفظ التغييرات</string>
     <string name="DeleteTD">Delete Draft</string>
     <string name="DeleteMessageTD">Are you sure you want to delete this Draft ? </string>
     <string name="DeleteOKTD">Delete Draft</string>
@@ -49,89 +47,89 @@
     <string name="TDUpdatedFialed">The Text Draft Did not Updated, Try Again</string>
 
     <!-- Add Appointment Reminder Page -->
-    <string name="AddApp">New Appointment</string>
-    <string name="TitleApp">Title</string>
-    <string name="DayApp">Day</string>
-    <string name="TimeApp">Time</string>
+    <string name="AddApp">موعد جديد</string>
+    <string name="TitleApp">العنوان</string>
+    <string name="DayApp">اليوم</string>
+    <string name="TimeApp">الوقت</string>
     <string name="SetDayApp">Set Day</string>
     <string name="SetTimeApp">Set Time</string>
-    <string name="SaveApp">Confirm</string>
-    <string name="CurrentTime">The chosen time must after now</string>
+    <string name="SaveApp">حفظ</string>
+    <string name="CurrentTime">الوقت المختار يجب ان يكون بعد الوقت الحالي</string>
     <string name="AppSavedSuccess">The Appointment Reminder Saved Successfully</string>
     <string name="AppSavedFialed">The Appointment Reminder Did not Saved, Try Again</string>
 
     <!-- Delete App Reminder Page -->
-    <string name="AppDetails">Appointment</string>
-    <string name="DeleteApp">Delete Appointment</string>
+    <string name="AppDetails">الموعد</string>
+    <string name="DeleteApp">حذف الموعد</string>
     <string name="DeleteMessageApp">Are you sure you want to delete this Appointment Reminder ? </string>
-    <string name="DeleteOKApp">Delete</string>
+    <string name="DeleteOKApp">حذف</string>
     <string name="DeleteCancleApp">Cancel</string>
     <string name="AppDeletedSuccess">The Appointment Reminder Deleted Successfully</string>
     <string name="AppDeletedFialed">The Appointment Reminder Did not Deleted, Try Again</string>
 
     <!-- Add Medicine Reminder Page -->
-    <string name="AddMed">New Medicine</string>
-    <string name="SDMed">Starting from day</string>
+    <string name="AddMed">دواء جديد</string>
+    <string name="SDMed">البدأ بهذا اليوم</string>
     <string name="StartMedDate">Start</string>
-    <string name="STMed">Time of first reminder</string>
+    <string name="STMed">الوقت لاول يوم</string>
     <string name="DoseMed">Dose</string>
     <string name="SetDoseMed">Set Dose</string>
-    <string name="RepMed">Repeat</string>
-    <string name="EvMed">Every</string>
-    <string name="timesMed">times</string>
+    <string name="RepMed">التكرار</string>
+    <string name="EvMed">كل</string>
+    <string name="timesMed">من المرات</string>
     <string name="MedSavedSuccess">The Medicine Reminder Saved Successfully</string>
     <string name="MedSavedFialed">The Medicine Reminder Did not Saved, Try Again</string>
 
     <!-- Delete Med Reminder Page -->
-    <string name="MedDetails">Medicine</string>
-    <string name="DeleteMed">Delete Medicine</string>
+    <string name="MedDetails">الدواء</string>
+    <string name="DeleteMed">حذف الدواء</string>
     <string name="DeleteMessageMed">Are you sure you want to delete this Medicine Reminder ? </string>
-    <string name="DeleteOKMed">Delete</string>
+    <string name="DeleteOKMed">حذف</string>
     <string name="DeleteCancleMed">Cancel</string>
     <string name="MedDeletedSuccess">The Medicine Reminder Deleted Successfully</string>
     <string name="MedDeletedFialed">The Medicine Reminder Did not Deleted, Try Again</string>
 
     <!-- Add Doctor Page -->
-    <string name="AddDoc">Add Doctor</string>
-    <string name="AddDocName">Doctor Name</string>
-    <string name="AddDocEmail">Doctor Email</string>
-    <string name="PatientEmail">You Can not Use Your Email</string>
+    <string name="AddDoc">اضف الطبيب</string>
+    <string name="AddDocName">اسم الطبيب</string>
+    <string name="AddDocEmail">ايميل الطبيب</string>
+    <string name="PatientEmail">لا يمكنك ان تستخدم ايميلك</string>
     <string name="AddDocSuccess">The Doctor Added Successfully</string>
     <string name="AddDocFialed">The Doctor Did not Added, Try Again</string>
-    <string name="SaveDoc">Add Doctor</string>
+    <string name="SaveDoc">اضف الطبيب</string>
 
     <!-- Delete Med Reminder Page -->
-    <string name="MyDoc">My Doctor</string>
-    <string name="DeleteDoc">Delete Doctor</string>
+    <string name="MyDoc">طبيبي</string>
+    <string name="DeleteDoc">حذف الطبيب</string>
     <string name="DeleteMessageDoc">
         After deleting this doctor s/he will no longer be linked with your account
         and the automatic periodic reports will be disabled.
     </string>
-    <string name="DeleteOKDoc">Delete</string>
+    <string name="DeleteOKDoc">حذف</string>
     <string name="DeleteCancleDoc">Cancel</string>
     <string name="DocDeletedSuccess">The Doctor Deleted Successfully</string>
     <string name="DocDeletedFialed">The Doctor Did not Deleted, Try Again</string>
 
     <!-- Edit Profile Page -->
     <string name="ChooseImage">Choose Image</string>
-    <string name="OldPassET">Old Password</string>
-    <string name="NewPassET">New Password</string>
-    <string name="CNPassET">Confirm New password</string>
+    <string name="OldPassET">كلمة السر القديمة</string>
+    <string name="NewPassET">كلمة السر الجديدة</string>
+    <string name="CNPassET">تأكيد كلمة السر الجديدة</string>
     <string name="ForgetPassSuccess">Reset Password was send to Your Email Successfully</string>
     <string name="ForgetPassFialed">Try Again, Reset Password did not send</string>
     <string name="EmptyName">Name Should not be Empty</string>
-    <string name="NotCorrectName">* Enter valid name.</string>
+    <string name="NotCorrectName">* ادخل ايميل صحيح</string>
     <string name="UpdateNameSuccess">Your Name Updated Successfully</string>
     <string name="UpdateNameFialed">Your Name did not Updated, Try Again</string>
     <string name="ImageUpSuccess">Your Image Profile Updated Successfully</string>
-    <string name="SelectPicture">Select Image</string>
+    <string name="SelectPicture">اختار صورة</string>
     <string name="ProfileInfoUpdateSuccess">Your Profile Information Updated Successfully</string>
     <string name="ProfileInfoUpdateFialed">Your Profile Information did not Updated, Try Again</string>
-    <string name="DeleteAcc">Delete Account</string>
+    <string name="DeleteAcc">حذف الحساب</string>
     <string name="DeleteMessageAcc">
         Deleting this account will result in completely removing your account from the system,\n you will not be able to access your account again.
     </string>
-    <string name="DeleteOKAcc">Delete</string>
+    <string name="DeleteOKAcc">حذف</string>
     <string name="DeleteCancleAcc">Cancel</string>
     <string name="AccDeletedSuccess">Your Account Deleted Successfully</string>
     <string name="AccDeletedFialed">Your Account Did not Deleted, Try Again</string>
@@ -145,18 +143,18 @@
     <string name="NotCorrectCD">Only Letters Accepted in Chronic Disease</string>
     <string name="SocioInfoUpdateSuccess">Your Socio Information Updated Successfully</string>
     <string name="SocioInfoUpdateFialed">Your Socio Information did not Updated, Try Again</string>
-    <string name="SaveSocioUpdate">Save</string>
+    <string name="SaveSocioUpdate">حفظ</string>
 
     <!-- Patient Profile Page -->
     <string name="VervEmail">To Help Ensure Your Accounts Security Please Verify Your Email.</string>
     <string name="VervEmailSuccess">Email Was Sent For Verification</string>
     <string name="VervEmailFialed">Email Did Not Sent, Try Again</string>
     <string name="NoDoc">No Doctor</string>
-    <string name="LogOut">Log Out</string>
+    <string name="LogOut">تسجيل الخروج</string>
     <string name="LogOutMsg">
         Are You Sure You Want To Logout ?
     </string>
-    <string name="LogOutOK">Logout</string>
+    <string name="LogOutOK">تسجيل خروج</string>
     <string name="LogOutCancle">Cancel</string>
     <string name="LogOutSuccess">Your Account Deleted Successfully</string>
     <string name="LogOutFialed">Your Account Did not Deleted, Try Again</string>
@@ -176,11 +174,11 @@
     <string name="SocioNotFound">You Have First Complete The Registration Requirements Before Log in</string>
 
     <!-- Suign up Page -->
-    <string name="NotValidName">* Enter valid name.</string>
-    <string name="NotValidEmail">* Enter valid email.</string>
-    <string name="NotMatchPass">* Password does not match.</string>
-    <string name="ExistUser">* Email already used by another account.</string>
-    <string name="PasswordShort">* Password must be at least 8 characters.</string>
+    <string name="NotValidName">* ادخل اسم صحيح</string>
+    <string name="NotValidEmail">* ادخل ايميل صحيح</string>
+    <string name="NotMatchPass">* الرقم السري لايطابق</string>
+    <string name="ExistUser">* يوجد حساب بهذا الايميل</string>
+    <string name="PasswordShort">* يجب ان يكون طول كلمة السر لا يقل عن ٦ احرف</string>
     <string name="SignUpSuccess">Signed Up Success</string>
     <string name="SignUpFialed">* Sign in Failed, Please try again</string>
 
@@ -205,5 +203,14 @@
     <!-- All Draft Fragment Page -->
     <string name="Text">Text Drafts</string>
     <string name="Voice">Voice Drafts</string>
+
+    <!-- Voice Draft Dialog -->
+    <string name="SpeedPalyAydio">X2</string>
+    <string name="DeleteAudio">حذف</string>
+    <string name="DeleteMessageAudio">Are you sure you want to delete this Voice Draft ? </string>
+    <string name="yes">نعم</string>
+    <string name="no">لا</string>
+    <string name="AudioDeletedSuccess">The Voice Draft Deleted Successfully</string>
+    <string name="AudioDeletedFialed">The Voice Draft Did not Deleted, Try Again</string>
 
 </resources>
