--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,6 @@
     <string name="none">Not employed</string>
     <string name="cancel">Cancel</string>
 
-
-    <string name="no">No</string>
     <string name="appointments">Appointments</string>
     <string name="calendar">Calendar</string>
     <string name="medicine">Medicine</string>
@@ -116,7 +114,6 @@
     <string name="delete">delete</string>
     <string name="google_calendar_description">Serene wants to connect with your google calendar to get your events in order to perform correctly.</string>
     <string name="medicine_name">Medicine Name</string>
-    <string name="yes">Yes</string>
     <string name="alert">Your email has not been verified.</string>
     <string name="empty">There are no upcoming appointments</string>
     <string name="tips">Quote of the day</string>
@@ -301,7 +298,7 @@
     <string name="NotValidEmail">* Enter valid email.</string>
     <string name="NotMatchPass">* Password does not match.</string>
     <string name="ExistUser">* Email already used by another account.</string>
-    <string name="PasswordShort">* Password must be at least 8 characters.</string>
+    <string name="PasswordShort">* Password must be at least 6 characters.</string>
     <string name="SignUpSuccess">Signed Up Success</string>
     <string name="SignUpFialed">* Sign in Failed, Please try again</string>
 
@@ -326,6 +323,15 @@
     <!-- All Draft Fragment Page -->
     <string name="Text">Text Draft/s</string>
     <string name="Voice">Voice Draft/s</string>
+
+    <!-- Voice Draft Dialog -->
+    <string name="SpeedPalyAydio">X2</string>
+    <string name="DeleteAudio">Delete</string>
+    <string name="DeleteMessageAudio">Are you sure you want to delete this Voice Draft ? </string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="AudioDeletedSuccess">The Voice Draft Deleted Successfully</string>
+    <string name="AudioDeletedFialed">The Voice Draft Did not Deleted, Try Again</string>
 
 </resources>
 
